# goodlooks

./: .gitignore  LANGCHAIN_RECOMMEND_AGENT_PLAN.md  README.md  V1_PLAN.md  V2_PLAN.md  V3_PLAN.md  pyproject.toml  requirements.txt
cli/: __init__.py  goodlooks.py  recommender_agent.py
